src/test/ui/resolve/issue-16058.stderr
error[E0574]: expected struct, variant or union type, found enum `Result`
  --> $DIR/issue-16058.rs:19:9
   |
19 |         Result {
   |         ^^^^^^ not a struct, variant or union type
   |
   = help: possible better candidates are found in other modules, you can import them into scope:
   = help:   `use std::fmt::Result;`
   = help:   `use std::io::Result;`
   = help:   `use std::thread::Result;`

error: aborting due to previous error

